--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.9"
+    "joi": "^17.4.0",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.13.0"
   }
 }
